objects/SFDC_MDF__c.object
<CustomObject>
    <description>Track Grant request details including partner account, requested amount, activity type and date, and approval status.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner account making the MDF request</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000002DjDDEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>The date the activity is planned. Optionally incorporate a validation rule to ensure that there is ample lead time to approve the request before the planned activity.</description>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>A list of available activity types. Customize as needed.</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Course Fees</fullName>
                </value>
                <value>
                    <fullName>Registration Fees</fullName>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <description>The number of elapsed days since the request was created</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The requested amount. Consider activating a validation rule to enforce a certain minimum or maximum amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>The date the fund request was approved. This should be updated through a workflow approval process.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is automatically checked by the fund request approval process and in turn recalculates the budget balances</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally assign the fund request to a budget.</description>
        <label>Budget</label>
        <referenceTo>SFDC_Budget__c</referenceTo>
        <relationshipName>R00N30000002DjDHEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Course to be registered</description>
        <label>CC Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ccrz__E_Product__c.CC_Category__r.Name</field>
                <operation>equals</operation>
                <value>Caregiving Scheduling</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Grant Requests</relationshipLabel>
        <relationshipName>Grant_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Deadline_Date__c</fullName>
        <description>Set through the approval process this date is the date the submitter has to submit a claim related to this request</description>
        <label>Claim Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Outcome__c</fullName>
        <description>Have the partner state what they want to accomplish from this request/ marketing activity</description>
        <label>Desired Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Fund_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Activity_Type__c</fullName>
        <description>Used when the user chooses &apos;other&apos; as the activity type</description>
        <label>Other Activity Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner account owner which is derived using an APEX trigger and generally not through the UI</description>
        <inlineHelpText>The partner account owner which is derived using an APEX trigger and generally not through the UI</inlineHelpText>
        <label>Partner Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002DjDQEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <description>High level information about the fund request</description>
        <label>Request Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <description>A unique id assigned to the fund request. Optionally useful for the partner as a means to identify the specific fund request record.</description>
        <displayFormat>{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Select_Budget_Warning__c</fullName>
        <description>Used on the approval page to alert the user to select a budget is they have not done so already</description>
        <formula>if( Budget__c = &quot;&quot;,  HYPERLINK(&quot;/&quot; &amp; Id,  &quot;IF APPROVING, PLEASE EDIT THE FUND REQUEST AND SELECT A BUDGET&quot; , &quot;_parent&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Budget Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The fund request approval status. This should be updated through an approval process rather than changing through the user interface</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <description>The intended target audience for the fund request</description>
        <label>Target Audience</label>
        <type>TextArea</type>
    </fields>
    <label>Grant Request</label>
    <nameField>
        <displayFormat>REQ-{000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Activity_Date_Days_In_Future</fullName>
        <active>true</active>
        <description>Confirm that the training date is a certain # days in the future</description>
        <errorConditionFormula>AND(   OR (      ISNEW(),       ISCHANGED( Activity_Date__c )),    Activity_Date__c &lt; (TODAY()+0) )</errorConditionFormula>
        <errorDisplayField>Activity_Date__c</errorDisplayField>
        <errorMessage>The training date should be 0 days or more in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_Limits</fullName>
        <active>true</active>
        <description>Incorporate limits on the requested amount</description>
        <errorConditionFormula>OR(     Amount__c &lt; 200,    Amount__c &gt; 2000 )</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The amount requested must be between $200 and $2,000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Other_Activity_Type</fullName>
        <active>true</active>
        <description>Used to force the user to choose fill in the &apos;other activity type&apos; when &apos;other&apos; is chosen as the activity type.</description>
        <errorConditionFormula>AND(ISPICKVAL( Activity_Type__c, &quot;Other&quot;), LEN(Other_Activity_Type__c )=0)</errorConditionFormula>
        <errorDisplayField>Other_Activity_Type__c</errorDisplayField>
        <errorMessage>Please provide details on the &apos;Other&apos; activity type.</errorMessage>
    </validationRules>
</CustomObject>